# DartGameSystem

./: .gitignore  CreateDesktopShortcut.ps1  DartGameSystem.sln  DartsMob.md  README.md  README_RUN.txt  RUN_DARTSMOB.bat  START_DARTSMOB.bat  add_calibration_data.sql  apply_edits.py  camera_test.py  camera_test2.py  check_cal.py  controller_patch.py  create_icon.py  debug_errors.py  debug_f50.py  debug_f50_keys.py  debug_f50_v2.py  debug_f50_v3.py  debug_new_game.py  debug_plumbing.py  debug_r2d1.py  fix_benchmark_swap.py  fix_correct.py  fix_correct2.py  fix_miss.py  fix_miss_benchmark.py  fix_modal.py  gamemodels_patch.py  gameservice_patch.py  js_patch.py  json_fix.py  migration_cameras.sql  optimize_whrs.py  patch_mult.py  phase8b_homography_audit.py  plot_warped_lines.py  raw_json_test.py  replay_native.py  (+6 more)
DartDetectLib/: CMakeLists.txt  build.bat  dart_detect_internal.h
DartDetectLib/include/: cbfc_decl.txt  dart_detect.h  dart_detect_internal.h
DartDetectLib/src/: asymmetry.cpp  aup.cpp  bbms.cpp  cbfc.cpp  ccr.cpp  cmhl.cpp  dart_detect.cpp  dea.cpp  dsa.cpp  hhs.cpp  iqdl.cpp  mask.cpp  mfr.cpp  pca_detection.cpp  sap.cpp  scoring.cpp  sghf.cpp  skeleton.cpp  skeleton_new.cpp  triangulation.cpp  whrs.cpp
DartDetectLib/test/: test_detect.cpp
DartGameAPI/: DartGameAPI.csproj  DartGameAPI.http  Program.cs  appsettings.json
DartsMobDB/: DartsMobDB.sqlproj  README.md
config/: settings.example.yaml  settings.yaml
debug_outputs/: ab_phase11c_v2.json  ab_phase17_iqdl.json  ab_phase19_mfr.json  ab_phase23_sghf.json  ab_phase26_whrs.json  ab_phase27_dcwo.json  (+46 more)
(+90 files in other folders)
